GL/Projet_GL/src/test/deca/context/invalid/simple_field_err.deca
class A {
    int f() {
        return 0;
    }
}
class B extends A {
    int f;
}
{
}


// Champ cache une méthode de la superclasse
// Name already used for a method in super class